Agregando las plantillas de licencias, mejorando los scripts

--- a/conf/variables.conf
+++ b/conf/variables.conf
@@ -3,6 +3,8 @@ VERDE="\e[1;32m"
 ROJO="\e[1;31m"
 AMARILLO="\e[1;33m"
 FIN="\e[0m"
+datos_proyecto_exec=0
+set_repos_exec=0
 CONF="/home/desarrollo/canaima-desarrollador-1.0+0/conf/usuario.conf"
 FUNCIONES="/home/desarrollo/canaima-desarrollador-1.0+0/scripts/funciones-desarrollador.sh"
 PLANTILLAS="/home/desarrollo/canaima-desarrollador-1.0+0/plantillas/"
