--- a/conf/variables.conf
+++ b/conf/variables.conf
@@ -2,6 +2,7 @@ PKG="canaima-desarrollador"
 VERDE="\e[1;32m"
 ROJO="\e[1;31m"
 AMARILLO="\e[1;33m"
+BOLD="\e[1m"
 FIN="\e[0m"
 datos_proyecto_exec=0
 set_repos_exec=0
