Modificando README y debian/control

--- a/conf/usuario.conf
+++ b/conf/usuario.conf
@@ -11,7 +11,7 @@ REPO_USER="git"
 REPO_DIR="canaima-gnu-linux"
 
 # Directorio local donde guardas todos tus proyectos git
-DEV_DIR="/home/luis/desarrollo/"
+DEV_DIR="/home/desarrollo/"
 
 # Nombre con el que identificarás tus proyectos.
 # Debe coincidir con los datos de tu llave GPG.
