--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: canaima-desarrollador
 Section: unknown
 Priority: extra
 Maintainer: Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>
-Build-Depends: cdbs, debhelper (>= 7.0.50~)
+Build-Depends: cdbs, debhelper (>= 7.0.50~), python-sphinx, texlive-latex-extra
 Standards-Version: 3.8.4
 Homepage: <insert the upstream URL, if relevant>
 #Vcs-Git: git://git.debian.org/collab-maint/canaima-desarrollador.git
