--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,16 @@
-Source: canaima-desarrollador
-Section: unknown
-Priority: extra
-Maintainer: Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>
-Build-Depends: cdbs, debhelper (>= 7.0.50~), python-sphinx, texlive-latex-extra
-Standards-Version: 3.8.4
-Homepage: <insert the upstream URL, if relevant>
-#Vcs-Git: git://git.debian.org/collab-maint/canaima-desarrollador.git
-#Vcs-Browser: http://git.debian.org/?p=collab-maint/canaima-desarrollador.git;a=summary
+Source: canaima-base
+Section: misc
+Priority: optional
+Maintainer: Equipo de Desarrollo de Canaima GNU/Linux <desarrolladores@canaima.softwarelibre.gob.ve>
+Uploaders: José Miguel Parrella Romero <jparrella@onuva.com>, Carlos David Marrero <cdmarrero2040@gmail.com>, Orlando Andrés Fiol Carballo <ofiol@indesoft.org.ve>, Carlos Alejandro Guerrero Mora <guerrerocarlos@gmail.com>, Diego Alberto Aguilera Zambrano <diegoaguilera85@gmail.com>, Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>, Francisco Javier Vásquez Guerrero <franjvasquezg@gmail.com>
+Build-Depends: debhelper (>= 7.0.50~), cdbs
+Standards-Version: 3.9.1
+Homepage: http://canaima.softwarelibre.gob.ve/
+Vcs-Git: git://gitorious.org/canaima-gnu-linux/canaima-base.git
+Vcs-Browser: http://gitorious.org/canaima-gnu-linux/canaima-base/trees/master
 
-Package: canaima-desarrollador
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Package: canaima-base
+Architecture: all
+Depends: localepurge, base-files (>=5.9+1canaima0), lsb-core (>=3.2-23.1canaima0), lsb-release (>=3.2-23.1canaima0), desktop-base (>=5.0.6canaima4), canaima-escritorio-gnome, ${shlibs:Depends}, ${misc:Depends}
+Description: Archivos base de Canaima GNU/Linux
+ Este paquete provee los archivos base de Canaima GNU/Linux.
