--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,16 @@
-Source: canaima-base
+Source: canaima-desarrollador
 Section: misc
 Priority: optional
 Maintainer: Equipo de Desarrollo de Canaima GNU/Linux <desarrolladores@canaima.softwarelibre.gob.ve>
 Uploaders: José Miguel Parrella Romero <jparrella@onuva.com>, Carlos David Marrero <cdmarrero2040@gmail.com>, Orlando Andrés Fiol Carballo <ofiol@indesoft.org.ve>, Carlos Alejandro Guerrero Mora <guerrerocarlos@gmail.com>, Diego Alberto Aguilera Zambrano <diegoaguilera85@gmail.com>, Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>, Francisco Javier Vásquez Guerrero <franjvasquezg@gmail.com>
-Build-Depends: debhelper (>= 7.0.50~), cdbs
+Build-Depends: debhelper (>= 7.0.50~), cdbs, python-sphinx, 
 Standards-Version: 3.9.1
 Homepage: http://canaima.softwarelibre.gob.ve/
-Vcs-Git: git://gitorious.org/canaima-gnu-linux/canaima-base.git
-Vcs-Browser: http://gitorious.org/canaima-gnu-linux/canaima-base/trees/master
+Vcs-Git: git://gitorious.org/canaima-gnu-linux/canaima-desarrollador.git
+Vcs-Browser: http://gitorious.org/canaima-gnu-linux/canaima-desarrollador/trees/master
 
-Package: canaima-base
+Package: canaima-desarrollador
 Architecture: all
-Depends: localepurge, base-files (>=5.9+1canaima0), lsb-core (>=3.2-23.1canaima0), lsb-release (>=3.2-23.1canaima0), desktop-base (>=5.0.6canaima4), canaima-escritorio-gnome, ${shlibs:Depends}, ${misc:Depends}
-Description: Archivos base de Canaima GNU/Linux
+Depends: dpkg-dev, git-core, git-buildpackage, dh-make, ${shlibs:Depends}, ${misc:Depends}
+Description: Paquete que facilita la creación de Software para Canaima
  Este paquete provee los archivos base de Canaima GNU/Linux.
