--- a/conf/usuario.conf
+++ b/conf/usuario.conf
@@ -1,38 +1,38 @@
-# Fichero de configuración para Canaima Desarrollador
+# Fichero de configuración personal para Canaima Desarrollador
 
-# Datos del repositorio
+# Datos del repositorio remoto donde se alojan todos tus proyectos
 # Dominio del servidor
-REPO="gitorious.org"
+REPO=""
 
 # Usuario SSH para acceder al servidor
-REPO_USER="git"
+REPO_USER=""
 
 # Directorio del servidor donde se encuentran alojados todos los proyectos
-REPO_DIR="canaima-gnu-linux"
+REPO_DIR=""
 
 # Directorio local donde guardas todos tus proyectos git
-DEV_DIR="/home/desarrollo/"
+DEV_DIR=""
 
 # Nombre con el que identificarás tus proyectos.
 # Debe coincidir con los datos de tu llave GPG.
-DEV_NAME="Luis Alejandro Martínez Faneyth"
+DEV_NAME=""
 
 # Correo con el que identificarás tus proyectos. 
 # Debe coincidir con los datos de tu llave GPG.
-DEV_MAIL="martinez.faneyth@gmail.com"
+DEV_MAIL=""
 
-# Tu llave GPG
-DEV_GPG="E78DAA2E"
+# Tu llave pública GPG
+DEV_GPG=""
 
 # Lugar donde se moverán los .tar.gz .changes .diff y .dsc
 # cuando se termine de empaquetar un proyecto
-DEPOSITO_SOURCES="/home/desarrollo/SOURCES"
+DEPOSITO_SOURCES=""
 
 # Lugar donde se moverán los .deb cuando se 
 # termine de empaquetar un proyecto
-DEPOSITO_DEBS="/home/desarrollo/DEBS"
+DEPOSITO_DEBS=""
 
 # Lugar donde se moverán los .build cuando se 
 # termine de empaquetar un proyecto
-DEPOSITO_LOGS="/home/desarrollo/LOGS"
+DEPOSITO_LOGS=""
 
