--- a/conf/variables.conf
+++ b/conf/variables.conf
@@ -4,8 +4,6 @@ ROJO="\e[1;31m"
 AMARILLO="\e[1;33m"
 BOLD="\e[1m"
 FIN="\e[0m"
-datos_proyecto_exec=0
-set_repos_exec=0
-CONF="/home/desarrollo/canaima-desarrollador-1.0+0/conf/usuario.conf"
-FUNCIONES="/home/desarrollo/canaima-desarrollador-1.0+0/scripts/funciones-desarrollador.sh"
-PLANTILLAS="/home/desarrollo/canaima-desarrollador-1.0+0/plantillas/"
+CONF="${HOME}/.config/canaima-desarrollador/usuario.conf"
+FUNCIONES="/usr/share/canaima-desarrollador/scripts/funciones-desarrollador.sh"
+PLANTILLAS="/usr/share/canaima-desarrollador/plantillas/"
