--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: misc
 Priority: optional
 Maintainer: Equipo de Desarrollo de Canaima GNU/Linux <desarrolladores@canaima.softwarelibre.gob.ve>
 Uploaders: José Miguel Parrella Romero <jparrella@onuva.com>, Carlos David Marrero <cdmarrero2040@gmail.com>, Orlando Andrés Fiol Carballo <ofiol@indesoft.org.ve>, Carlos Alejandro Guerrero Mora <guerrerocarlos@gmail.com>, Diego Alberto Aguilera Zambrano <diegoaguilera85@gmail.com>, Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>, Francisco Javier Vásquez Guerrero <franjvasquezg@gmail.com>
-Build-Depends: debhelper (>= 7.0.50~), cdbs, python-sphinx, 
+Build-Depends: debhelper (>= 7.0.50~), cdbs, python-sphinx, texlive-latex-extra, python-docutils
 Standards-Version: 3.9.1
 Homepage: http://canaima.softwarelibre.gob.ve/
 Vcs-Git: git://gitorious.org/canaima-gnu-linux/canaima-desarrollador.git
@@ -11,6 +11,6 @@ Vcs-Browser: http://gitorious.org/canaima-gnu-linux/canaima-desarrollador/trees/
 
 Package: canaima-desarrollador
 Architecture: all
-Depends: dpkg-dev, git-core, git-buildpackage, dh-make, ${shlibs:Depends}, ${misc:Depends}
+Depends: dpkg-dev, git-core, git-buildpackage, dh-make, canaima-curiara, ${shlibs:Depends}, ${misc:Depends}
 Description: Paquete que facilita la creación de Software para Canaima
  Este paquete provee los archivos base de Canaima GNU/Linux.
