Mejorando el esquema de ayuda

--- a/conf/variables.conf
+++ b/conf/variables.conf
@@ -21,6 +21,8 @@ CONF="${HOME}/.config/canaima-desarrollador/usuario.conf"
 FUNCIONES="/usr/share/canaima-desarrollador/scripts/funciones-desarrollador.sh"
 # Carpeta sonde se guardan las plantillas
 PLANTILLAS="/usr/share/canaima-desarrollador/plantillas/"
+# Carpeta donde se guarda la documentación
+DIR_AYUDA="/usr/share/doc/canaima-desarrollador/ayuda"
 
 # ¿Cuál navegador utilizo para mostrar el Manual del Desarrollador?
 NAVEGADOR="canaima-curiara"
