Corrigiendo bug con la ejecución de los parámetros de ayuda.

--- a/plantillas/Makefile
+++ b/plantillas/Makefile
@@ -23,7 +23,7 @@ SHELL := sh -e
 
 SCRIPTS = "debian/preinst install" "debian/postinst configure" "debian/prerm remove" "debian/postrm remove"
 
-all: clean test build install
+all: build
 
 test:
 
