Añadiendo devscripts a las dependencias y sustituyendo canaima-curiara por sensible-browser. Resolviendo #445 y #364.

--- a/conf/variables.conf
+++ b/conf/variables.conf
@@ -25,4 +25,4 @@ PLANTILLAS="/usr/share/canaima-desarrollador/plantillas/"
 DIR_AYUDA="/usr/share/doc/canaima-desarrollador/ayuda"
 
 # ¿Cuál navegador utilizo para mostrar el Manual del Desarrollador?
-NAVEGADOR="canaima-curiara"
+NAVEGADOR="sensible-browser"
