--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,9 @@
 Source: canaima-desarrollador
 Section: misc
 Priority: optional
-Maintainer: Equipo de Desarrollo de Canaima GNU/Linux <desarrolladores@canaima.softwarelibre.gob.ve>
-Uploaders: Luis Alejandro Martínez Faneyth <luis@huntingbears.com.ve>
-Build-Depends: debhelper (>= 7.0.50~), cdbs, python-sphinx, texlive, python-docutils
-Standards-Version: 3.9.1
+Maintainer: Luis Alejandro Martínez Faneyth <luis@huntingbears.com.ve>
+Build-Depends: debhelper (>= 9), python-sphinx, texlive, python-docutils
+Standards-Version: 3.9.4
 Homepage: http://canaima.softwarelibre.gob.ve/
 Vcs-Git: git://gitorious.org/canaima-gnu-linux/canaima-desarrollador.git
 Vcs-Browser: http://gitorious.org/canaima-gnu-linux/canaima-desarrollador/trees/master
